--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,22 @@ dist-ssr
 *.sln
 *.sw?
 .vercel
+
+# Environment variables and sensitive files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.env
+
+# API Keys and sensitive data
+read.txt
+api-keys.txt
+secrets/
+config/secrets.json
+
+# Security files
+*.key
+*.pem
+*.cert
