--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "emailjs-com": "^3.2.0",
+    "firebase": "^12.0.0",
     "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
     "openai": "^5.9.0",
