--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && vercel --prod",
+    "deploy:alias": "npm run deploy && vercel alias set $(vercel ls | grep 'vscode-portfolio' | head -1 | awk '{print $2}') joellaggui.vercel.app"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
@@ -18,7 +20,7 @@
     "firebase": "^12.0.0",
     "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
-    "openai": "^5.9.0",
+    "openai": "^5.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
